# charwork

./: .gitignore  README.md  Strokes.txt  alembic.ini  pyproject.toml  requirements.txt  新增plan.md  迁移plan.md
.serena/: project.yml
app/: main.py
app/core/: app_state.py  auth.py  celery_app.py  config.py  database.py  es_client.py  logging.py  management_scope.py  redis_client.py  security.py  thread_pool.py  url_refresh_config.py
app/models/: __init__.py  ai_chat.py  ai_feedback.py  assignment.py  assignment_attachment_upload.py  assignment_reminder.py  assignment_template.py  attachment.py  category.py  comment.py  comment_like.py  course.py  custom_field.py  event_outbox.py  hanzi.py  hanzi_dictionary.py  management_system.py  management_system_record.py  message.py  student.py  student_class.py  submission.py  teacher.py  teaching_class.py  user.py
app/repositories/: ai_chat_repo.py  ai_feedback_repo.py  assignment_attachment_upload_repo.py  assignment_reminder_repo.py  assignment_repo.py  assignment_template_repo.py  attachment_repo.py  (+16 more)
docs/: cross-module-search-design.md  interaction-notification-module-design.md  project-config-run-guide.md  search-sync-canal-rabbitmq-design.md  teaching-module-design.md  user-manual.md
scripts/: __init__.py  backfill_imagex_uri.py  fix_dup_tcid.py  migrate_image_paths_to_attachments.py  ts2utc.py
tests/: test_ai_feedback.py  test_base_search_service.py  test_cross_search_service.py  test_hanzi_dictionary_search_service.py  test_search_registry_preload.py  test_student_classes.py  test_submission_service.py
(+123 files in other folders)
